Fix Bug 332344 - KMail Composing with apostrophes cursor jumps all over

FIXED-IN: 4.13
BUG: 332344