pimcommon/autocorrection/tests/autocorrection_gui.cpp
@@ -76,12 +76,17 @@ void TextEditAutoCorrectionWidget::keyPressEvent ( QKeyEvent *e )
     if((e->key() == Qt::Key_Space) || (e->key() == Qt::Key_Enter) || (e->key() == Qt::Key_Return)) {
         if(mAutoCorrection && mAutoCorrection->isEnabledAutoCorrection()) {
             const QTextCharFormat initialTextFormat = textCursor().charFormat();
-            mAutoCorrection->autocorrect(acceptRichText(), *document(),textCursor().position());
+            int position = textCursor().position();
+            mAutoCorrection->autocorrect(acceptRichText(), *document(), position);
+            QTextCursor cur = textCursor();
+            cur.setPosition(position);
             if (e->key() == Qt::Key_Space) {
-                textCursor().insertText(QLatin1String(" "), initialTextFormat);
+                cur.insertText(QLatin1String(" "), initialTextFormat);
+                setTextCursor(cur);
                 return;
             } else {
-                textCursor().insertText(QLatin1String("\n"), initialTextFormat);
+                cur.insertText(QLatin1String("\n"), initialTextFormat);
+                setTextCursor(cur);
                 return;
             }
         }
